deployments/k8s/mssql-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-nodeport-service
  namespace: yaml
spec:
  type: NodePort
  selector:
    app: mssql
  ports:
  - name: default
    protocol: TCP
    port: 1433
    targetPort: 1433
