deployments/k8s/platform-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-deployment
  namespace: yaml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-service
  template:
    metadata:
      labels:
        app: platform-service
    spec:
      containers:
        - name: platform-service
          image: maksimsech/platform-service:latest-arm
          ports:
            - containerPort: 81
---
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-service
  namespace: yaml
spec:
  type: ClusterIP
  selector:
    app: platform-service
  ports:
    - name: default
      protocol: TCP
      port: 80
      targetPort: 80
    - name: grpc
      protocol: TCP
      port: 81
      targetPort: 81
