deployments/k8s/platform-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-nodeport-service
  namespace: yaml
spec:
  type: NodePort
  selector:
    app: platform-service
  ports:
  - name: default
    protocol: TCP
    port: 80
    targetPort: 80
