deployments/k8s/ingress-path-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: yaml
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-service
spec:
  rules:
  - http:
      paths:
      - path: /platforms
        pathType: Prefix
        backend:
          service:
            name: platform-clusterip-service
            port:
              number: 80
  - http:
      paths:
      - path: /commands
        pathType: Prefix
        backend:
          service:
            name: command-clusterip-service
            port:
              number: 80
